--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@radium/core.config.eslint": "^0.0.1",
     "@radium/core.uiweb.text": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.1",
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "eslint": "^8.7.0",
@@ -42,5 +42,8 @@
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "yarn": "^1.22.17"
   }
 }
